--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "socket.io": "^4.6.1"
-  },
-  "devDependencies": {
+    "socket.io": "^4.6.1",
     "nodemon": "^2.0.22"
   }
 }
